--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aglit",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -14,7 +14,7 @@
   "bin": {
     "aglit": "./dist/index.js"
   },
-  "files": ["dist"],
+  "files": ["dist", "README.md"],
   "scripts": {
     "build": "bun build src/index.ts --outdir dist --target bun --format esm --sourcemap --external @stricli/core --banner '#!/usr/bin/env bun\n' && tsgo -p tsconfig.json --emitDeclarationOnly",
     "prepack": "bun run build",
@@ -31,5 +31,14 @@
   },
   "devDependencies": {
     "@jmmarotta/aglit-sdk": "workspace:*"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jmmarotta/agilt.git",
+    "directory": "packages/cli"
+  },
+  "bugs": {
+    "url": "https://github.com/jmmarotta/agilt/issues"
+  },
+  "homepage": "https://github.com/jmmarotta/agilt/tree/main/packages/cli#readme"
 }
